--- a/source/assets/stylesheets/scss/helpers/_themes.scss
+++ b/source/assets/stylesheets/scss/helpers/_themes.scss
@@ -62,12 +62,6 @@ $themes: (
         }
       }
     }
-
-    @media screen and (max-width: 768px) {
-      .ch-dropdown-content {
-        background-color: $mainColorDark;
-      }
-    }
   }
 }
 
